--- a/packages/FitNoteIT-frontend/fitnoteit/package.json
+++ b/packages/FitNoteIT-frontend/fitnoteit/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
