Backend architecture design, users module design, endpoints added

--- a/packages/FitNoteIT-backend/src/Bootstrapper/Properties/launchSettings.json
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/Properties/launchSettings.json
@@ -9,11 +9,12 @@
     }
   },
   "profiles": {
-    "http": {
+    "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5131",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
