--- a/packages/FitNoteIT-backend/src/Modules/Users/Core/Core.csproj
+++ b/packages/FitNoteIT-backend/src/Modules/Users/Core/Core.csproj
@@ -9,7 +9,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\..\Shared\Shared\Shared.csproj" />
+	  <ProjectReference Include="..\Shared\Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Persistence\Migrations\" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
 	</ItemGroup>
 
 </Project>
