Added cors policy

--- a/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
@@ -36,5 +36,12 @@
     "Email": "superadmin@mail.com",
     "Password": "superadminpassword",
     "UserName": "superadmin"
+  },
+
+  "Cors": {
+    "AllowedOrigins": "*",
+    "AllowedMethods": "*",
+    "AllowedHeaders": "*"
   }
+
 }
