--- a/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
@@ -3,7 +3,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Verbose",
+        "Microsoft": "Debug",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
