Added exercise module basic structure

--- a/packages/FitNoteIT-backend/src/Bootstrapper/Bootstrapper.csproj
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/Bootstrapper.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Modules\Exercises\API\API.csproj" />
 		<ProjectReference Include="..\Modules\Users\API\API.csproj" />
 	</ItemGroup>
 
