--- a/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
@@ -8,7 +8,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -19,11 +21,9 @@
       }
     ]
   },
-
   "ConnectionStrings": {
     "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=FitNoteIT;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-
   "Auth": {
     "Issuer": "fitnoteit-issuer",
     "Audience": "fitnoteit-audience",
@@ -31,17 +31,14 @@
     "AccessTokenExpiry": "00.01:00:00",
     "RefreshTokenExpiry": "01.00:00:00"
   },
-
   "SuperAdminAccount": {
     "Email": "superadmin@mail.com",
     "Password": "superadminpassword",
     "UserName": "superadmin"
   },
-
   "Cors": {
     "AllowedOrigins": "*",
     "AllowedMethods": "*",
     "AllowedHeaders": "*"
   }
-
 }
