Added workouts module

--- a/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
+++ b/packages/FitNoteIT-backend/src/Bootstrapper/appsettings.json
@@ -22,7 +22,8 @@
     ]
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=FitNoteIT;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=FitNoteIT;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDb": "mongodb://localhost:27017"
   },
   "Auth": {
     "Issuer": "fitnoteit-issuer",
