--- a/packages/FitNoteIT-backend/src/Modules/Workouts/Shared/Shared.csproj
+++ b/packages/FitNoteIT-backend/src/Modules/Workouts/Shared/Shared.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj"/>
+        <ProjectReference Include="..\..\Exercises\Shared\Shared.csproj" />
+        <ProjectReference Include="..\..\Users\Shared\Shared.csproj" />
     </ItemGroup>
     
 </Project>
