--- a/packages/FitNoteIT-backend/src/Modules/Workouts/Core/Core.csproj
+++ b/packages/FitNoteIT-backend/src/Modules/Workouts/Core/Core.csproj
@@ -12,4 +12,12 @@
         <ProjectReference Include="..\Shared\Shared.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Abstractions\" />
+    </ItemGroup>
+
 </Project>
